Fixed layout bugs and improved thumbs

--- a/style.css
+++ b/style.css
@@ -1,63 +1,120 @@
-ytd-watch-grid #blocker-grid {
+ytd-watch-grid #secondary #blocker-grid {
     display: grid !important;
     grid-template-columns: 1fr !important;
     grid-auto-flow: dense;
-    padding: 0px 10px 0px 0px !important;
+    width: 100% !important;
+    padding: 0px 0px 0px 0px !important;
 }
 
-ytd-watch-grid ytd-rich-item-renderer {
+ytd-watch-grid #primary #blocker-grid {
+    display: none !important;
+}
+
+ytd-watch-grid #secondary {
+    --ytd-watch-flexy-sidebar-width: 400px;
+}
+
+ytd-watch-grid ytd-rich-grid-renderer {
+    margin-left: 0px !important;
     margin-right: 0px !important;
-    margin-left: var(--ytd-rich-grid-item-margin) !important;
 }
 
-    ytd-watch-grid ytd-rich-item-renderer #dismissible {
+ytd-watch-grid #secondary ytd-rich-item-renderer {
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+}
+
+    ytd-watch-grid #secondary ytd-rich-item-renderer #dismissible {
         flex-direction: row !important;
     }
 
-    ytd-watch-grid ytd-rich-item-renderer #thumbnail {
-        flex: none !important;
-        width: 180px !important;
+    ytd-watch-grid #secondary ytd-rich-item-renderer #video-title {
+        font-size: 1.4rem !important;
+        line-height: 2rem !important;
     }
 
-    ytd-watch-grid ytd-rich-item-renderer #avatar-link, ytd-watch-grid ytd-rich-item-renderer #metadata-line span ~ span, ytd-watch-grid ytd-rich-item-renderer #attached-survey {
+    ytd-watch-grid #secondary ytd-rich-item-renderer #channel-name, ytd-watch-grid #secondary ytd-rich-item-renderer #metadata-line {
+        font-size: 1.2rem !important;
+        line-height: 1.8rem !important;
+    }
+
+    ytd-watch-grid #secondary ytd-rich-item-renderer ytd-thumbnail {
+        flex: none !important;
+        width: 168px !important;
+        height: 94px !important;
+        margin-right: 8px !important;
+    }
+
+    ytd-watch-grid #secondary ytd-rich-item-renderer #avatar-link, ytd-watch-grid #secondary ytd-rich-item-renderer #attached-survey, ytd-watch-grid #secondary ytd-rich-item-renderer #details #buttons {
         display: none !important;
     }
 
-    ytd-watch-grid ytd-rich-item-renderer #meta {
+    ytd-watch-grid #secondary ytd-rich-item-renderer #meta {
+        width: 100%;
+        font-size: 1.4rem !important;
+        line-height: 2rem !important;
+        padding: 0px !important;
+        margin-right: 24px !important;
+    }
+
+    ytd-watch-grid #secondary ytd-rich-item-renderer #metadata-line {
+        flex-wrap: nowrap;
+    }
+
+    ytd-watch-grid #secondary ytd-rich-item-renderer #metadata-line span {
+        flex: none;
+    }
+
+    ytd-watch-grid #secondary ytd-rich-item-renderer #metadata-line span ~ span {
         flex: auto;
-        padding: 0px 12px 0px 8px !important;
+        width: 100px;
+        text-wrap: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
-    ytd-watch-grid ytd-rich-item-renderer h3 {
-        margin: 0px 8px 0px 4px !important;
+    ytd-watch-grid #secondary ytd-rich-item-renderer h3 {
+        margin: 0px;
     }
 
-ytd-watch-grid #secondary-inner {
+ytd-watch-grid #primary #secondary-inner {
     margin-top: 10px !important;
     animation: none !important;
     width: 100% !important;
 }
 
-ytd-watch-grid #fixed-secondary {
+ytd-watch-grid #secondary #secondary-inner {
+    display: none !important;
+}
+
+ytd-watch-grid #primary #subscribe-button {
+    margin-left: 8px !important;
+}
+
+ytd-watch-grid #primary ytd-menu-renderer {
+    width: auto !important;
+}
+
+ytd-watch-grid #secondary #fixed-secondary {
     position: relative !important;
     top: unset !important;
     left: unset !important;
     right: unset !important;
+    transform: none !important;
     width: auto !important;
     height: auto !important;
-    overflow: hidden !important;
     max-height: calc(100vh - var(--ytd-watch-flexy-masthead-height) - var(--ytd-watch-grid-columns-top-margins) - var(--ytd-watch-grid-horizontal-page-margins)) !important;
     margin-bottom: 10px !important;
     animation: slide-up .3s ease-out backwards !important;
 }
 
-ytd-playlist-panel-renderer, ytd-engagement-panel-section-list-renderer {
+ytd-watch-grid ytd-playlist-panel-renderer, ytd-watch-grid ytd-engagement-panel-section-list-renderer, ytd-watch-grid #secondary #chat {
     position: relative !important;
     top: unset !important;
     bottom: unset !important;
     max-height: calc(100vh - var(--ytd-watch-flexy-masthead-height) - var(--ytd-watch-grid-columns-top-margins) - var(--ytd-watch-grid-horizontal-page-margins)) !important;
 }
 
-ytd-engagement-panel-section-list-renderer {
+ytd-watch-grid ytd-engagement-panel-section-list-renderer, ytd-watch-grid #secondary ytd-live-chat-frame:not([collapsed]) {
     height: calc(100vh - var(--ytd-watch-flexy-masthead-height) - var(--ytd-watch-grid-columns-top-margins) - var(--ytd-watch-grid-horizontal-page-margins)) !important;
 }
